2016-10-10  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodesy/__init__.py:

	ellipsoid_r_geodetic() and ellipsoid_r_geocentric() now take float and
	ndarray as lat argument.

	* typhon/geodesy/tests/test_geodesy.py:

	Added checks for ellipsoid_r_geodetic() and ellipsoid_r_geocentric().

2016-10-10  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/latex.py:

	Moved from typhon.utils as it does not really fit there.

	* typhon/__init__.py, typhon/utils/__init__.py: Fixed imports.

	* doc/latex.rst, doc/modules.rst, doc/utils.rst: Updated documentation.

2016-10-07  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geographical.py:

	General functions for manipulation geographical data.
	Currently containing a function to calculate area weighted mean.

	* typhon/__init__.py: Import new module.

	* doc/geographical.rst, doc/modules.rst:

	Included new module in the documentation.

2016-10-07  Richard larsson <ric.larsson@gmail.com>

	* typhon/geodesy/__init__.py (cartposlos2geocentric):
	
	Fixed logic bug and made explicit the differences from the atmlab version

2016-10-07  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodesy/__init__.py

	Removed make_same_size() as it can be replaced with np.broadcast_arrays().

	Several PEP8 fixes.

	I barely touched any functionality and the code produces the same results
	for a couple of dummy values.

2016-10-07  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/__init__.py:

	Perform 'import *' on all modules in the physics package. This leads to a
	flatter package hierarchy.

	Moved all functions to new module typhon.physics.em.

	* typhon/physics/em.py:

	Moved all functions related to the electro-magnetic spectrum to this
	module.

	* typhon/physics/thermodynamics.py: Use absolute imports.

	* typhon/physics/units/__init__.py:

	Perform 'import *' on all modules in the physics.units package.

	* typhon/physics/units/common.py,
	typhon/physics/units/constants.py,
	typhon/physics/units/em.py,